Remove some unnecessary boxing